# swarph-shared

./: .gitignore  LICENSE  README.md  pyproject.toml
src/swarph_shared/: __init__.py  caller_convention.py  cell.py  json_mode.py  subprocess_env.py
tests/: test_caller_convention.py  test_cell.py  test_json_mode.py  test_subprocess_env.py
